--- a/package-analytics/main/default/classes/PackageExtractJobTest.cls
+++ b/package-analytics/main/default/classes/PackageExtractJobTest.cls
@@ -1,6 +1,6 @@
 /*
   The SObjects `MetadataPackage`, `MetadataPackageVersion`, and `PackageSubscriber` cannot be created or modified in Apex,
-  so this test class uses instances of `SObject` & some classic JSON deserialization methods to create mock records.
+  so this test class uses instances of inner classes in `PackageExtractJob` to create mock records.
   When these SObjects *are* present, the data is visible to tests (even without @SeeAllData), so integration tests are also included below.
 */
 @IsTest
@@ -29,14 +29,11 @@ private class PackageExtractJobTest {
     job.sobjectNames = new List<String>{ 'MetadataPackage' };
 
     // Act
-    Database.QueryLocator queryLocator = job.start(null);
+    job.start(null);
 
     // Assert
-    String expectedQuery = Database.getQueryLocator(
-        'SELECT Id, Name, NamespacePrefix, PackageCategory, SystemModStamp FROM MetadataPackage'
-      )
-      .getQuery();
-    System.assertEquals(expectedQuery, queryLocator.getQuery());
+    String expectedQuery = 'SELECT Id, Name, NamespacePrefix, PackageCategory, SystemModStamp FROM MetadataPackage';
+    System.assertEquals(expectedQuery, job.currentQuery);
   }
 
   @IsTest
@@ -46,14 +43,11 @@ private class PackageExtractJobTest {
     job.sobjectNames = new List<String>{ 'MetadataPackageVersion' };
 
     // Act
-    Database.QueryLocator queryLocator = job.start(null);
+    job.start(null);
 
     // Assert
-    String expectedQuery = Database.getQueryLocator(
-        'SELECT BuildNumber, Id, IsDeprecated, MajorVersion, MetadataPackageid, MinorVersion, Name, PatchVersion, ReleaseState, SystemModStamp FROM MetadataPackageVersion'
-      )
-      .getQuery();
-    System.assertEquals(expectedQuery, queryLocator.getQuery());
+    String expectedQuery = 'SELECT BuildNumber, Id, IsDeprecated, MajorVersion, MetadataPackageid, MinorVersion, Name, PatchVersion, ReleaseState, SystemModStamp FROM MetadataPackageVersion';
+    System.assertEquals(expectedQuery, job.currentQuery);
   }
 
   @IsTest
@@ -63,37 +57,35 @@ private class PackageExtractJobTest {
     job.sobjectNames = new List<String>{ 'PackageSubscriber' };
 
     // Act
-    Database.QueryLocator queryLocator = job.start(null);
+    job.start(null);
 
     // Assert
-    String expectedQuery = Database.getQueryLocator(
-        'SELECT Id, InstalledStatus, InstanceName, MetadataPackageId, MetadataPackageVersionId, OrgKey, OrgName, OrgStatus, OrgType, ParentOrg, SystemModStamp FROM PackageSubscriber'
-      )
-      .getQuery();
-    System.assertEquals(expectedQuery, queryLocator.getQuery());
+    String expectedQuery = 'SELECT Id, InstalledStatus, InstanceName, MetadataPackageId, MetadataPackageVersionId, OrgKey, OrgName, OrgStatus, OrgType, ParentOrg, SystemModStamp FROM PackageSubscriber';
+    System.assertEquals(expectedQuery, job.currentQuery);
   }
 
   @IsTest
   static void storesPackageDataOnExecute() {
     // Arrange
-    SObject metadataPackage = generateMetadataPackage();
+    PackageExtractJob.MetadataPackageInfo metadataPackage = generateMetadataPackageInfo();
     Integer countOfPackageRecords = [SELECT COUNT() FROM Package__c];
     System.assertEquals(0, countOfPackageRecords);
 
     // Act
     PackageExtractJob job = new PackageExtractJob();
-    job.execute(null, new List<SObject>{ metadataPackage });
+    job.currentSObjectName = 'MetadataPackage';
+    job.execute(null, new List<Object>{ metadataPackage });
 
     // Assert
     Package__c storedPackage = [
       SELECT LastUpdated__c, PackageCategory__c, PackageId__c, Name, NamespacePrefix__c
       FROM Package__c
     ];
-    System.assertEquals((String) metadataPackage.get('PackageCategory'), storedPackage.PackageCategory__c);
-    System.assertEquals(Id.valueOf((String) metadataPackage.get('Id')), storedPackage.PackageId__c);
-    System.assertEquals((String) metadataPackage.get('Name'), storedPackage.Name);
-    System.assertEquals((String) metadataPackage.get('NamespacePrefix'), storedPackage.NamespacePrefix__c);
-    System.assertEquals((Datetime) metadataPackage.get('SystemModStamp'), storedPackage.LastUpdated__c);
+    System.assertEquals(metadataPackage.PackageCategory, storedPackage.PackageCategory__c);
+    System.assertEquals(metadataPackage.Id, storedPackage.PackageId__c);
+    System.assertEquals(metadataPackage.Name, storedPackage.Name);
+    System.assertEquals(metadataPackage.NamespacePrefix, storedPackage.NamespacePrefix__c);
+    System.assertEquals(metadataPackage.SystemModStamp, storedPackage.LastUpdated__c);
   }
 
   @IsTest
@@ -101,13 +93,16 @@ private class PackageExtractJobTest {
     // Arrange
     Package__c storedPackage = generateStoredPackage();
     insert storedPackage;
-    SObject metadataPackageVersion = generateMetadataPackageVersion(storedPackage.PackageId__c);
+    PackageExtractJob.MetadataPackageVersionInfo metadataPackageVersion = generateMetadataPackageVersionInfo(
+      storedPackage.PackageId__c
+    );
     Integer countOfPackageVersionRecords = [SELECT COUNT() FROM PackageVersion__c];
     System.assertEquals(0, countOfPackageVersionRecords);
 
     // Act
     PackageExtractJob job = new PackageExtractJob();
-    job.execute(null, new List<SObject>{ metadataPackageVersion });
+    job.currentSObjectName = 'MetadataPackageVersion';
+    job.execute(null, new List<Object>{ metadataPackageVersion });
 
     // Assert
     PackageVersion__c storedPackageVersion = [
@@ -124,16 +119,16 @@ private class PackageExtractJobTest {
         SubscriberPackageVersionId__c
       FROM PackageVersion__c
     ];
-    System.assertEquals((Decimal) metadataPackageVersion.get('BuildNumber'), storedPackageVersion.BuildNumber__c);
-    System.assertEquals((Boolean) metadataPackageVersion.get('IsDeprecated'), storedPackageVersion.IsDeprecated__c);
-    System.assertEquals((Decimal) metadataPackageVersion.get('MajorVersion'), storedPackageVersion.MajorVersion__c);
-    System.assertEquals((Decimal) metadataPackageVersion.get('MinorVersion'), storedPackageVersion.MinorVersion__c);
-    System.assertEquals((String) metadataPackageVersion.get('Name'), storedPackageVersion.Name);
+    System.assertEquals(metadataPackageVersion.BuildNumber, storedPackageVersion.BuildNumber__c);
+    System.assertEquals(metadataPackageVersion.IsDeprecated, storedPackageVersion.IsDeprecated__c);
+    System.assertEquals(metadataPackageVersion.MajorVersion, storedPackageVersion.MajorVersion__c);
+    System.assertEquals(metadataPackageVersion.MinorVersion, storedPackageVersion.MinorVersion__c);
+    System.assertEquals(metadataPackageVersion.Name, storedPackageVersion.Name);
     System.assertEquals(storedPackage.Id, storedPackageVersion.Package__c);
-    System.assertEquals((Decimal) metadataPackageVersion.get('PatchVersion'), storedPackageVersion.PatchVersion__c);
-    System.assertEquals((String) metadataPackageVersion.get('ReleaseState'), storedPackageVersion.ReleaseState__c);
-    System.assertEquals((String) metadataPackageVersion.get('Id'), storedPackageVersion.SubscriberPackageVersionId__c);
-    System.assertEquals((Datetime) metadataPackageVersion.get('SystemModStamp'), storedPackageVersion.LastUpdated__c);
+    System.assertEquals(metadataPackageVersion.PatchVersion, storedPackageVersion.PatchVersion__c);
+    System.assertEquals(metadataPackageVersion.ReleaseState, storedPackageVersion.ReleaseState__c);
+    System.assertEquals(metadataPackageVersion.Id, storedPackageVersion.SubscriberPackageVersionId__c);
+    System.assertEquals(metadataPackageVersion.SystemModStamp, storedPackageVersion.LastUpdated__c);
   }
 
   @IsTest
@@ -141,20 +136,21 @@ private class PackageExtractJobTest {
     // Arrange
     Package__c storedPackage = generateStoredPackage();
     insert storedPackage;
-    SObject metadataPackageVersion = generateMetadataPackageVersion(
-      storedPackage.PackageId__c,
-      new Map<String, Object>{ 'Name' => 'Z'.repeat(10000) }
+    PackageExtractJob.MetadataPackageVersionInfo metadataPackageVersion = generateMetadataPackageVersionInfo(
+      storedPackage.PackageId__c
     );
+    metadataPackageVersion.Name = 'Z'.repeat(10000);
     Integer countOfPackageVersionRecords = [SELECT COUNT() FROM PackageVersion__c];
     System.assertEquals(0, countOfPackageVersionRecords);
 
     // Act
     PackageExtractJob job = new PackageExtractJob();
-    job.execute(null, new List<SObject>{ metadataPackageVersion });
+    job.currentSObjectName = 'MetadataPackageVersion';
+    job.execute(null, new List<Object>{ metadataPackageVersion });
 
     // Assert
     Integer fieldMaxLength = Schema.PackageVersion__c.Name.getDescribe().getLength();
-    String expectedTruncatedName = ((String) metadataPackageVersion.get('Name')).left(fieldMaxLength);
+    String expectedTruncatedName = metadataPackageVersion.Name.left(fieldMaxLength);
     PackageVersion__c storedPackageVersion = [SELECT Name FROM PackageVersion__c];
     System.assertEquals(expectedTruncatedName, storedPackageVersion.Name);
   }
@@ -166,13 +162,16 @@ private class PackageExtractJobTest {
     insert storedPackage;
     PackageVersion__c storedPackageVersion = generateStoredPackageVersion(storedPackage.Id);
     insert storedPackageVersion;
-    SObject packageSubscriber = generatePackageSubscriber(storedPackageVersion.SubscriberPackageVersionId__c);
+    PackageExtractJob.PackageSubscriberInfo packageSubscriber = generatePackageSubscriberInfo(
+      storedPackageVersion.SubscriberPackageVersionId__c
+    );
     Integer countOfPackageSubscriberOrgRecords = [SELECT COUNT() FROM PackageSubscriberOrg__c];
     System.assertEquals(0, countOfPackageSubscriberOrgRecords);
 
     // Act
     PackageExtractJob job = new PackageExtractJob();
-    job.execute(null, new List<SObject>{ packageSubscriber });
+    job.currentSObjectName = 'PackageSubscriber';
+    job.execute(null, new List<Object>{ packageSubscriber });
 
     // Assert
     PackageSubscriberOrg__c storedPackageSubscriberOrg = [
@@ -188,21 +187,15 @@ private class PackageExtractJobTest {
         PackageVersion__c
       FROM PackageSubscriberOrg__c
     ];
-    System.assertEquals(
-      Id.valueOf((String) packageSubscriber.get('Id')),
-      storedPackageSubscriberOrg.PackageSubscriberId__c
-    );
-    System.assertEquals(
-      (String) packageSubscriber.get('InstalledStatus'),
-      storedPackageSubscriberOrg.InstalledStatus__c
-    );
-    System.assertEquals((String) packageSubscriber.get('InstanceName'), storedPackageSubscriberOrg.InstanceName__c);
-    System.assertEquals((String) packageSubscriber.get('OrgName'), storedPackageSubscriberOrg.Name);
-    System.assertEquals(Id.valueOf((String) packageSubscriber.get('OrgKey')), storedPackageSubscriberOrg.OrgId__c);
-    System.assertEquals((String) packageSubscriber.get('OrgStatus'), storedPackageSubscriberOrg.OrgStatus__c);
-    System.assertEquals((String) packageSubscriber.get('OrgType'), storedPackageSubscriberOrg.OrgType__c);
+    System.assertEquals(packageSubscriber.Id, storedPackageSubscriberOrg.PackageSubscriberId__c);
+    System.assertEquals(packageSubscriber.InstalledStatus, storedPackageSubscriberOrg.InstalledStatus__c);
+    System.assertEquals(packageSubscriber.InstanceName, storedPackageSubscriberOrg.InstanceName__c);
+    System.assertEquals(packageSubscriber.OrgName, storedPackageSubscriberOrg.Name);
+    System.assertEquals(packageSubscriber.OrgKey, storedPackageSubscriberOrg.OrgId__c);
+    System.assertEquals(packageSubscriber.OrgStatus, storedPackageSubscriberOrg.OrgStatus__c);
+    System.assertEquals(packageSubscriber.OrgType, storedPackageSubscriberOrg.OrgType__c);
     System.assertEquals(storedPackageVersion.Id, storedPackageSubscriberOrg.PackageVersion__c);
-    System.assertEquals((Datetime) packageSubscriber.get('SystemModStamp'), storedPackageSubscriberOrg.LastUpdated__c);
+    System.assertEquals(packageSubscriber.SystemModStamp, storedPackageSubscriberOrg.LastUpdated__c);
   }
 
   @IsTest
@@ -239,7 +232,7 @@ private class PackageExtractJobTest {
   static void runsBatchJobForMetadataPackageWhenOrgIsDevHub() {
     // Integration test - this can only run in dev hubs that have 1+ packages, so use a few guard clauses to see if this test can run
     // Global describe - yuck!
-    if (Schema.getGlobalDescribe().containsKey('MetadataPackage') == false) {
+    if (PackageExtractJob.IS_DEV_HUB == false) {
       System.debug(
         LoggingLevel.INFO,
         'Current org does not have the SObject MetadataPackage, skipping integration test'
@@ -281,67 +274,47 @@ private class PackageExtractJobTest {
   // TODO - add additional integration tests for MetadataPackageVersion & PackageSubscriber
 
   // Helper methods
-  private static SObject generateMetadataPackage() {
-    Map<String, Object> sobjectAttributes = new Map<String, Object>{ 'type' => 'MetadataPackage' };
-    Map<String, Object> metadataPackageUntyped = new Map<String, Object>{
-      'attributes' => sobjectAttributes,
-      'Id' => UserInfo.getUserId(), // The actual ID doesn't matter - it just needs to be a real ID
-      'Name' => 'My Amazing 2GP',
-      'NamespacePrefix' => 'some_namespace',
-      'PackageCategory' => 'Package2',
-      'SystemModStamp' => System.now().addDays(-1)
-    };
-
-    String metadataPackageJson = JSON.serialize(metadataPackageUntyped);
-    SObject metadataPackage = (SObject) JSON.deserialize(metadataPackageJson, SObject.class);
+  private static PackageExtractJob.MetadataPackageInfo generateMetadataPackageInfo() {
+    PackageExtractJob.MetadataPackageInfo metadataPackage = new PackageExtractJob.MetadataPackageInfo();
+    // The actual ID doesn't matter - it just needs to be a real ID
+    metadataPackage.Id = UserInfo.getUserId();
+    metadataPackage.Name = 'My Amazing 2GP';
+    metadataPackage.NamespacePrefix = 'some_namespace';
+    metadataPackage.PackageCategory = 'Package2';
+    metadataPackage.SystemModStamp = System.now().addDays(-1);
 
     return metadataPackage;
   }
 
-  private static SObject generateMetadataPackageVersion(Id metadataPackageId) {
-    return generateMetadataPackageVersion(metadataPackageId, new Map<String, Object>());
-  }
-
-  private static SObject generateMetadataPackageVersion(Id metadataPackageId, Map<String, Object> fieldValues) {
-    Map<String, Object> sobjectAttributes = new Map<String, Object>{ 'type' => 'MetadataPackageVersion' };
-    Map<String, Object> metadataPackageVersionUntyped = new Map<String, Object>{
-      'attributes' => sobjectAttributes,
-      'BuildNumber' => 99,
-      'Id' => UserInfo.getUserId(), // The actual ID doesn't matter - it just needs to be a real ID
-      'IsDeprecated' => false,
-      'MajorVersion' => 1,
-      'MinorVersion' => 2,
-      'Name' => 'The most amazing release!',
-      'MetadataPackageId' => metadataPackageId,
-      'PatchVersion' => 13,
-      'ReleaseState' => 'Beta',
-      'SystemModStamp' => System.now().addDays(-1)
-    };
-    metadataPackageVersionUntyped.putAll(fieldValues);
-
-    String metadataPackageVersionJson = JSON.serialize(metadataPackageVersionUntyped);
-    SObject metadataPackageVersion = (SObject) JSON.deserialize(metadataPackageVersionJson, SObject.class);
+  private static PackageExtractJob.MetadataPackageVersionInfo generateMetadataPackageVersionInfo(Id metadataPackageId) {
+    PackageExtractJob.MetadataPackageVersionInfo metadataPackageVersion = new PackageExtractJob.MetadataPackageVersionInfo();
+    metadataPackageVersion.BuildNumber = 99;
+    // The actual ID doesn't matter - it just needs to be a real ID
+    metadataPackageVersion.Id = UserInfo.getUserId();
+    metadataPackageVersion.IsDeprecated = false;
+    metadataPackageVersion.MajorVersion = 1;
+    metadataPackageVersion.MinorVersion = 2;
+    metadataPackageVersion.Name = 'The most amazing release!';
+    metadataPackageVersion.MetadataPackageId = metadataPackageId;
+    metadataPackageVersion.PatchVersion = 13;
+    metadataPackageVersion.ReleaseState = 'Beta';
+    metadataPackageVersion.SystemModStamp = System.now().addDays(-1);
 
     return metadataPackageVersion;
   }
 
-  private static SObject generatePackageSubscriber(Id metadataPackageVersionId) {
-    Map<String, Object> sobjectAttributes = new Map<String, Object>{ 'type' => 'PackageSubscriber' };
-    Map<String, Object> packageSubscriberUntyped = new Map<String, Object>{
-      'attributes' => sobjectAttributes,
-      'Id' => '0Hb01000000E08hABC',
-      'InstalledStatus' => 'i',
-      'InstanceName' => 'ABC123',
-      'MetadataPackageVersionId' => metadataPackageVersionId,
-      'OrgKey' => '00D3g0000019YLpEAM',
-      'OrgName' => 'My amazing org!',
-      'OrgStatus' => 'Demo',
-      'OrgType' => 'Sandbox',
-      'SystemModStamp' => System.now().addDays(-1)
-    };
-
-    String packageSubscriberJson = JSON.serialize(packageSubscriberUntyped);
-    SObject packageSubscriber = (SObject) JSON.deserialize(packageSubscriberJson, SObject.class);
+  private static PackageExtractJob.PackageSubscriberInfo generatePackageSubscriberInfo(Id metadataPackageVersionId) {
+    PackageExtractJob.PackageSubscriberInfo packageSubscriber = new PackageExtractJob.PackageSubscriberInfo();
+    // The actual ID doesn't matter - it just needs to be a real ID
+    packageSubscriber.Id = UserInfo.getUserId();
+    packageSubscriber.InstalledStatus = 'i';
+    packageSubscriber.InstanceName = 'ABC123';
+    packageSubscriber.MetadataPackageVersionId = metadataPackageVersionId;
+    packageSubscriber.OrgKey = '00D3g0000019YLpEAM';
+    packageSubscriber.OrgName = 'My amazing org!';
+    packageSubscriber.OrgStatus = 'Demo';
+    packageSubscriber.OrgType = 'Sandbox';
+    packageSubscriber.SystemModStamp = System.now().addDays(-1);
 
     return packageSubscriber;
   }
